--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,6 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/backend/index.js" },
     { "src": "/(.*)", "dest": "/frontend/index.html" }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
