--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
+    "concurrently": "^9.0.1",
     "flowbite": "^2.5.2",
+    "frontend": "file:",
+    "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "redux-toolkit": "^1.1.2",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "cd .. && cd backend && npm run dev",
+    "flask-api": "cd .. && cd backend && python app.py",
+    "dev": "concurrently -n \"client,server,flask\" -c \"bgBlue,bgYellow,bgMagenta\" \"npm start\" \"npm run server\" \"npm run flask-api\""
   },
   "eslintConfig": {
     "extends": [
